--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,5 +20,10 @@
         android:layout_height="wrap_content"
         android:text="@string/crypto_activity" />
 
+    <Button
+        android:id="@+id/bt_game_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/team_score_activity" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
